fixing alignment issue

--- a/components/CollectNFT/Collect.module.scss
+++ b/components/CollectNFT/Collect.module.scss
@@ -3,6 +3,7 @@
   // grid-template-rows: minmax(auto, 175px) 1fr;
   overflow: hidden;
   max-height: calc(100vh - 210px);
+  width: -webkit-fill-available;
 }
 
 .nftsContainer {
