--- a/components/CollectNFT/SubComponent/CollectNFT.module.scss
+++ b/components/CollectNFT/SubComponent/CollectNFT.module.scss
@@ -12,7 +12,6 @@
   align-items: center;
 }
 .collectNft {
-  margin: 30px 66px 0;
   // width: calc(100% - 100px);
   width: -webkit-fill-available;
 }
@@ -44,7 +43,7 @@
   backdrop-filter: blur(8px);
   border-radius: 4px;
 }
-.scroll::-webkit-scrollbar {
+.scrollContainer::-webkit-scrollbar {
   display: none;
 }
 .alreadyCollectedButton {
